# bistbot

./: .gitignore  Backtest_Algoritmasi.md  Benchmark_Algoritmalari_ve_Sonuclari.md  Mimari.md  README.md  promt.md  pyproject.toml
docs/: p0-trust-hardening.md
src/bistbot/: __init__.py  config.py  main.py
src/bistbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bistbot/api/: routes.py  schemas.py
src/bistbot/domain/: enums.py  models.py
src/bistbot/providers/: base.py  company_universe.py  yahoo.py
src/bistbot/services/: backtest.py  charting.py  clustering.py  costs.py  data_quality.py  jobs.py  normalization.py  portfolio_adjustments.py  position_management.py  presentation.py  research.py  risk.py  scoring.py  setup_lifecycle.py  strategy_selection.py
src/bistbot/static/: app.css  app.js
src/bistbot/storage/: base.py  disk_cache.py  memory.py
src/bistbot/storage/sql/: schema.sql
src/bistbot/templates/: backtest.html  base.html  dashboard.html
src/bistbot/web/: __init__.py  routes.py
tests/: test_api.py  test_backtest.py  test_charting.py  test_clustering.py  test_costs.py  test_data_quality.py  test_normalization.py  test_paper_trading.py  test_portfolio_adjustments.py  test_provider_yahoo.py  test_research.py  test_risk.py  test_scoring.py  test_setup_lifecycle.py  test_strategy_selection.py  test_trust_hardening.py
